--- a/index.html
+++ b/index.html
@@ -10,39 +10,64 @@
 </head>
 <body>
   <!--Barra de navegación-->
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" style="width:20%" href="#"><img src="assets/images/logo.png" class="w-50 d-block mx-auto"></a>
+          <a class="navbar-brand logo" href="index.html"><img src="assets/images/logo.png" class="d-block mx-auto"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-evenly p-3" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 justify-content-evenly p-2 w-75">
+            <ul class="navbar-nav mb-2 mb-lg-0 justify-content-between p-2">
               <li class="nav-item me-5">
                 <a class="nav-link active" aria-current="page" href="#">Quienes somos</a>
               </li>
-              <li class="nav-item me-5">
+              <li class="nav-item mx-5">
                 <a href="#" class="nav-link" href="#">Talleres</a>
               </li>
-              <li class="nav-item me-5">
+              <li class="nav-item mx-5">
                 <a href="#" class="nav-link">Detrás de escena</a>
               </li>
-              <li class="nav-item me-5">
+              <li class="nav-item mx-5">
                 <a href="#" class="nav-link">Cartelera</a>
               </li>
-              <li class="nav-item me-5">
+              <li class="nav-item mx-5">
                 <a href="#" class="nav-link">Contacto</a>
               </li>
             </ul>
-            <button class="btn btn-primary">INGRESO</button>
+            <button id="btnIngreso" class="btn btn-light">INGRESO</button>
           </div>
         </div>
       </nav>
     <!--Sección Slider-->
-    <section></section>
-
+    <section>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/fondo1.jpg" class="d-block w-100" alt="fondo1">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/fondo2.jpg" class="d-block w-100" alt="fondo2">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/fondo3.jpg" class="d-block w-100" alt="fondo3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
     <!--Sección línea de tiempo-->
-
     <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
