Implementación contacto, ubicación, footer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         </button>
       </div>
     </section>
-
     <!--Sección línea de tiempo-->
     <section>
       <div class="container-timeline">
@@ -160,6 +159,70 @@
         </div>
       </div>
     </section>
+    <!--Sección talleres-->
+    <section>
+      
+    </section>
+
+
+    <!--Sección contacto-->
+    <section id="contacto">
+      <h3>Contacto</h3>
+      <div id="remarque"></div>
+        <p>Escribinos tus consultas y te responderemos a la brevedad :D</p>
+        <form id="contacto-formulario">
+            <div class="row">
+                <div class="col-md-6 col-12">
+                  <input type="text" class="contacto-formulario__input" placeholder="Nombre" aria-label="First name" id="nombre">
+                </div>
+                <div class="col-md-6 col-12">
+                  <input type="text" class="contacto-formulario__input" placeholder="Apellido" aria-label="Last name" id="apellido">
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col-md-6 col-12">
+                  <input type="tel" class="contacto-formulario__input" placeholder="Telefono" aria-label="First name" id="nombre">
+                </div>
+                <div class="col-md-6 col-12">
+                  <input type="email" class="contacto-formulario__input" placeholder="Email" aria-label="Last name" id="apellido">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <textarea placeholder="Mensaje"></textarea>
+                </div>
+              </div>
+              <div id="div-btnEnviarDatos">
+                <input id="btnEnviarDatos" type="submit" class="btn btn-primary"></input>
+              </div>
+        </form>
+    </section>
+    <!--Sección Ubicación-->
+    <section id="ubicacion">
+      <h3>Ubicación</h3>
+      <div id="remarque"></div>
+      <p>Nos podes encontrar en Tafí Viejo</p>
+      <div id="div-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7126.734109997126!2d-65.2552452021157!3d-26.732660457886315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942267ba4b08b155%3A0xf5c2baa50f221dc4!2sMunicipalidad%20de%20Taf%C3%AD%20Viejo!5e0!3m2!1ses-419!2sar!4v1657754425030!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+    <!--Footer-->
+    <footer>
+      <div id="footer-info">
+        <h4>Acuarela-Taller de Teatro Musical</h4>
+        <p>Nombre del lugar donde se desarrolla la actividad</p>
+        <p>Dirección</p>
+        <p>Teléfono fijo (en caso de existir)</p>
+        <p>Whatsapp</p>
+      </div>
+      <div id="footer-links">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+      </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
     <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
