--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
           <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
             <ul class="navbar-nav g-0 justify-content-between p-2">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Quienes somos</a>
+                <a class="nav-link active" aria-current="page" href="#quienesSomos">Quienes somos</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" href="#">Talleres</a>
+                <a class="nav-link" href="#talleres">Talleres</a>
               </li>
               <li class="nav-item">
                 <a href="#" class="nav-link">Detrás de escena</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Cartelera</a>
+                <a href="#cartelera" class="nav-link">Cartelera</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Contacto</a>
+                <a href="#contacto" class="nav-link">Contacto</a>
               </li>
             </ul>
             <button id="btnIngreso" class="btn btn-light">INGRESO</button>
@@ -50,13 +50,39 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/images/fondo1.jpg" class="d-block w-100" alt="fondo1">
+            <div class="carousel-item__1">
+              <div class="carousel1_bg">
+                <div class="carousel2_bg-effects">
+                  <div class="carousel2_bg-effects_rectangle"></div>
+                  <div class="carousel2_bg-effects_circle1"></div>
+                  <div class="carousel2_bg-effects_circle2"></div>
+                </div>
+                <img src="./assets/images/img1_1.png" alt="img1_1" class="img1_1">
+                <img src="./assets/images/img1_2.png" alt="img1_2" class="img1_2">
+                <img src="./assets/images/img1_3.png" alt="img1_3" class="img1_3">
+                <img src="./assets/images/img1_4.png" alt="img1_4" class="img1_4">
+                <h2>Acuarela</h2>
+                <p>Con profundo orgullo y gran placer, le damos la bienvenida <br><br> 
+                  Pongase cómodo, relajesé, nuestro huesped sea usted</p>
+              </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/images/fondo2.jpg" class="d-block w-100" alt="fondo2">
+            <div class="carousel-item__2">
+              <div class="carousel--img"></div>
+              <div class="carousel--diagonal"></div>
+              <div class="carousel--text">
+                  <!--<img src="assets/images/fondo2.jpg" class="d-block w-100" alt="fondo2">-->
+                  <h2>Talleres</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat </p>
+                  <div class="container__carousel">
+                    <a href="#talleres">Más información</a>
+                  </div>
+              </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/images/fondo3.jpg" class="d-block w-100" alt="fondo3">
+            <img src="assets/images/fondo3.jpg" class="d-block w-100" style="height: 85vh" alt="fondo3">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -70,7 +96,7 @@
       </div>
     </section>
     <!--Sección línea de tiempo-->
-    <section>
+    <section id="quienesSomos">
       <div class="container-timeline">
         <div class="timeline">
             <div class="swiper-container swiper-container-vertical">
@@ -160,10 +186,57 @@
       </div>
     </section>
     <!--Sección talleres-->
-    <section>
-      
+    <section id="talleres">
+      <div class="section--talleres">
+        <div class="talleres--img"></div>
+        <div class="talleres--diagonal">
+        </div>
+        <div class="talleres--diagonal--borde"></div>
+        <div class="talleres--text">
+            <h2>Taller para niños</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat </p>
+            <ul>
+              <li>Duración</li>
+              <li>Costo</li>
+              <li>Requisitos</li>
+            </ul>
+        </div>
+      </div>
     </section>
 
+    <!-- Sección cartelera -->
+    <section id="cartelera">
+      <div class="section--cartelera">
+        <h2>Titulo de la obra</h2>
+        <p>Fechas y horarios</p>
+        <p>Lugar</p>
+        <p>Descripción</p>
+        <p>Lörem ipsum ipögt lagyns tred teraren. Bektiga repirtad antektigt. 
+          Rondellhund ambiosmos suprafoll. Häsk metaception om rera tibelt niren. 
+          Trekivis. Coronahälsning antede dent tills hypon sor. 
+          Nåsam. Diderat eura, krona snackis.</p>
+        <div class="section--cartelera-description">
+          <div>
+            <h3>Créditos</h3>
+            <ul>
+              <li>Música</li>
+              <li>Libretos</li>
+              <li>Dirección Musical</li>
+              <li>Dirección de escena y escenografía</li>
+            </ul>
+          </div>
+          <div>
+            <h3>Principales Intérpretes</h3>
+            <ul>
+              <li>Actor 1</li>
+              <li>Actor 2</li>
+              <li>Actor 3</li>
+              <li>Actor 4</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--Sección contacto-->
     <section id="contacto">
