Modificación de contenido textual

--- a/index.html
+++ b/index.html
@@ -105,55 +105,82 @@
                         <div class="swiper-slide-content">
                             <span class="timeline-year">2013</span>
                             <h4 class="timeline-title">La bella y la bestia</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="timeline-text">La primera obra realizada por Acuarela. 
+                              El espectáculo relata la historia de un joven príncipe transformado en una horrible bestia como castigo a su comportamiento cruel y egoísta, 
+                              y de una muchacha llamada Bella aquien la bestia encierra en su castillo a cambio de la libertad de su padre. Para convertirseen humano otra vez, el príncipe 
+                              deberá ganarse el amor de Bella antes de que sea demasiado tarde. 
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2014.png)" data-year="2014">
                         <div class="swiper-slide-content">
                             <span class="timeline-year">2014</span>
                             <h4 class="timeline-title">Frozen</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="timeline-text">La historia trata sobre una profecía que condena al reino de Arandelle a vivir en un invierno
+                              eterno. La joven Anna, el temerario montañero Kristoff y el reno Sven deben emprender un
+                              viaje épico y lleno de aventuras en busca de Elsa, la hermana de Anna y Reina de las
+                              Nieves. Ella es la única que puede poner fin al gélido hechizo.</p>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2015.png)" data-year="2015">
                         <div class="swiper-slide-content">
                             <span class="timeline-year">2015</span>
-                            <h4 class="timeline-title">Homenaje a Julie Andrews</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <h4 class="timeline-title">Bella Dama-La Novicia</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <h4 class="timeline-title">Rebelde-Mary Poppins</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h4 class="timeline-title">Mary Poppins</h4>
+                            <p class="timeline-text">Un encantador,
+                              imaginativo y original musical repleto de emotividad, ingenuidad, humor y buenos
+                              sentimientos, que cuenta la historia de dos niños rebeldes que pretenden llamar la
+                              atención de sus padres haciendo la vida imposible a todas las niñeras, y cómo se ve
+                              alterada con la llegada de Mary Poppins, una institutriz que baja de las nubes usando su paraguas como paracaídas</p>
+                            <h4 class="timeline-title">Mi Bella Dama</h4>
+                            <p class="timeline-text">“Mi bella dama”, musical ambientado en Reino Unido, que trata la historia de Eliza
+                              Doolittle, una joven que vende flores en la calle y que se caracteriza por tener una
+                              pronunciación terrible de su lengua, lo que además refleja su bajo nivel en la escala social.
+                              Una crítica, reflexiva y artística, sobre los prejuicios sociales que al día de hoy siguen
+                              vigentes...</p>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2016.png)" data-year="2016">
                         <div class="swiper-slide-content">
                             <span class="timeline-year">2016</span>
                             <h4 class="timeline-title">Matilda</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="timeline-text">La música, el buen humor, la puesta en escena, las interpretaciones, hacen de esta obra
+                              uno de los proyectos más destacados de Acuarela,
+                              La obra nos cuenta sobre una niña increíblemente inteligente e ingeniosa, pero que tiene
+                              padres que son bastante ignorantes y maleducados que la tratan con indiferencia.
+                              Su única esperanza será su profesora, que se da cuenta del
+                              potencial intelectual de la niña.</p>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2017.png)" data-year="2017">
                         <div class="swiper-slide-content">
                             <span class="timeline-year">2017</span>
                             <h4 class="timeline-title">Teatro Moon</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="timeline-text">De la pantalla grande adaptamos la maravillosa película “Sing” a nuestro escenario como
+                              “Teatro Moon”. Contando la historia de un koala llamado Buster que busca recuperar la
+                              gloria perdida de su teatro. Para conseguirlo convoca a un concurso de canto en el que se
+                              dará $100.000 al ganador. Siendo así acuden animales motivados por el dinero, la fama y
+                              la gran oportunidad de demostrar su talento.</p>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2018.png)" data-year="2018">
                         <div class="swiper-slide-content">
                             <span class="timeline-year">2018</span>
                             <h4 class="timeline-title">El Gran Show de los Acuarela</h4>
-                            <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="timeline-text">Para conmemorar los 10 años desde la creación de Acuarela, realizamos un show cuya
+                              primera parte constaba de un recorrido por las canciones y bailes que más nos
+                              emocionaron y divirtieron en las puestas en escena de los últimos años. Contando con “La
+                              bella y la Bestia”, “Helado Corazón”, “Mary Poppins”, “Matilda” y “Teatro Moon”.</p>
                         </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2019.png)" data-year="2019">
                       <div class="swiper-slide-content">
                           <span class="timeline-year">2019</span>
-                          <h4 class="timeline-title">Matilda</h4>
-                          <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                           <h4 class="timeline-title">Dracula</h4>
-                          <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="timeline-text">“Drácula” es uno de los musicales argentinos más importantes. Fue escrito y dirigido por
+                            Pepe Cibrián, con música de Ángel Mahler y producido por Tito Lectoure.
+                            Una puesta en escena impregnada de pasión y drama que atrapa al público y lo encanta,
+                            donde se puede apreciar una faceta de Acuarela más madura y completa que demuestra
+                            que la trayectoria ha dado su fruto.</p>
                       </div>
                     </div>
                     <div class="swiper-slide" style="background-image: url(https://unsplash.it/1920/500?image=16)" data-year="2020">
@@ -167,14 +194,30 @@
                       <div class="swiper-slide-content">
                           <span class="timeline-year">2021</span>
                           <h4 class="timeline-title">Tributo a Los Miserables</h4>
-                          <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="timeline-text">Luego del éxito de Drácula el año anterior, vino la pandemia, un tiempo muy duro para
+                            todos, especialmente para aquellos que perdieron seres queridos. La puesta en escena de
+                            “Los Miserables” por Acuarela fue la máxima demostración de superación y de trabajo
+                            duro, a
+                            la que no le faltó talento, pasión y esfuerzo de todo el equipo que trabajó tanto en la
+                            escena como detrás de escena.</p>
                       </div>
                     </div>
-                    <div class="swiper-slide" style="background-image: url(https://unsplash.it/1920/500?image=16)" data-year="2022">
+                    <div class="swiper-slide" style="background-image: url(./assets/images/timeline_2021.png)" data-year="2022">
                       <div class="swiper-slide-content">
                           <span class="timeline-year">2022</span>
-                          <h4 class="timeline-title">Our nice super title</h4>
-                          <p class="timeline-text">Lorem ipsum dolor site amet, consectetur adipscing elit, sed do eisumod tempor incididut ut labore et dolore magna aliqua. Ut enim ad mimim venjam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <h4 class="timeline-title">Six</h4>
+                          <p class="timeline-text">Una adaptación del musical británico con el libreto, música y letras escritas por Toby
+                            Marlow and Lucy Moss. El musical es un recuento moderno de las vidas de las seis
+                            esposas de Enrique VIII de Inglaterra presentado como un concierto de pop. Las esposas
+                            se toman turnos cantando y contando su historia para decidir quien sufrió más por Enrique,
+                            y por esa razón, debería ser la cantante principal del grupo. Es una obra definitivamente
+                            empoderadora, que despierta en el público la consciencia y lo desafía a repensar la
+                            historia.</p>
+                          <h4 class="timeline-title">Tributo a Los Miserables</h4>
+                          <p class="timeline-text">Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
+                            con canto en vivo, una producción acorde a las exigencias de esta obra y un vestuario
+                            típico de la misma. Es un espectáculo destinado a todo público sugerido desde los 13 años
+                            por la temática dramática.</p>
                       </div>
                   </div>
                 </div>
@@ -284,9 +327,9 @@
       <div id="footer-info">
         <h4>Acuarela-Taller de Teatro Musical</h4>
         <p>Nombre del lugar donde se desarrolla la actividad</p>
-        <p>Dirección</p>
-        <p>Teléfono fijo (en caso de existir)</p>
-        <p>Whatsapp</p>
+        <p>Dirección: Gral. José de San Martín 519, T4103, Tucumán</p>
+        <p>Teléfono fijo: 381 461-7438</p>
+        <p>Whatsapp: +54 381 300-8840</p>
       </div>
       <div id="footer-links">
         <a href="#"><i class="fa-brands fa-facebook"></i></a>
