--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#talleres">Talleres</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Detrás de escena</a>
+                <a href="pages/backstage.html" class="nav-link">Detrás de escena</a>
               </li>
               <li class="nav-item">
                 <a href="#cartelera" class="nav-link">Cartelera</a>
@@ -246,7 +246,6 @@
         </div>
       </div>
     </section>
-
     <!-- Sección cartelera -->
     <section id="cartelera">
       <div class="section--cartelera">
@@ -280,7 +279,6 @@
         </div>
       </div>
     </section>
-
     <!--Sección contacto-->
     <section id="contacto">
       <h3>Contacto</h3>
@@ -339,7 +337,6 @@
         <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </footer>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
     <script src="https://kit.fontawesome.com/41d1e297c9.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
