--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
   <!--Barra de navegación-->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="assets/images/logo.png" class="img-fluid d-block mx-auto"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand logo" aria-current="page" href="index.html"><img src="assets/images/logo.png" class="img-fluid d-block mx-auto"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><span class="navbar-toggler-icon"></span></button>
+      <div class="offcanvas d-lg-none offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header justify-content-end">
+          <button type="button" class="btn-close " data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <a class="nav-link mb-4 active fs-4" href="index.html" id="offcanvasRightLabel">Inicio</a>
+          <a class="nav-link mb-4 fs-5" href="pages/nosotros.html">Quienes somos</a>
+          <a class="nav-link mb-4 fs-5" href="pages/talleres.html">Talleres</a>
+          <a class="nav-link mb-4 fs-5" href="pages/backstage.html">Detrás de escena</a>
+          <a class="nav-link mb-4 fs-5" href="pages/cartelera.html">Cartelera</a>
+          <a class="nav-link mb-4 fs-5" href="pages/contacto.html">Contacto</a>
+          <button id="btnIngreso" class="btn btn-light mt-4">INGRESO</button>
+        </div>
+      </div>
       <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
         <ul class="navbar-nav g-0 justify-content-between p-2">
           <li class="nav-item">
@@ -27,13 +39,13 @@
             <a class="nav-link" href="pages/talleres.html">Talleres</a>
           </li>
           <li class="nav-item">
-            <a href="pages/backstage.html" class="nav-link">Detrás de escena</a>
+            <a class="nav-link" href="pages/backstage.html">Detrás de escena</a>
           </li>
           <li class="nav-item">
-            <a href="pages/cartelera.html" class="nav-link">Cartelera</a>
+            <a class="nav-link" href="pages/cartelera.html">Cartelera</a>
           </li>
           <li class="nav-item">
-            <a href="pages/contacto.html" class="nav-link">Contacto</a>
+            <a class="nav-link" href="pages/contacto.html">Contacto</a>
           </li>
         </ul>
         <button id="btnIngreso" class="btn btn-light">INGRESO</button>
