Modificación responsive sección contacto y footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -98,6 +98,8 @@
     <div id="footer-info">
       <h4>Acuarela-Taller de Teatro Musical</h4>
       <p>Dirección: Gral. José de San Martín 519, T4103, Tucumán</p>
+      <div class="footer-info__responsive-text">San Martín 519</div>
+      <div class="footer-info__responsive-text">Tafi Viejo, Tucumán</div>
       <p>Teléfono fijo: 381 461-7438</p>
       <p>Whatsapp: +54 381 300-8840</p>
     </div>
