Modificación slider item y boton contacto

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </nav>
-  <!--Sección Slider-->
+  <!-- Sección Slider -->
   <section id="slider">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
       <div class="carousel-indicators">
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <div class="carousel-item__2">
             <div class="carousel--img"></div>
             <div class="carousel--diagonal"></div>
@@ -87,13 +87,21 @@
                 <h2>Talleres</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat </p>
                 <div class="container__carousel">
-                  <a href="#talleres">Más información</a>
+                  <a href="pages/talleres.html">Más información</a>
                 </div>
             </div>
           </div>
         </div>
-        <div class="carousel-item carousel-item__3">
-          <img src="assets/images/fondo3.jpg" class="d-block w-100" style="height: 85vh" alt="fondo3">
+        <div class="carousel-item carousel-item__3 active">
+          <h2>Los <br>
+            Miserables</h2>
+          <p>Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
+            con canto en vivo.
+            Es un espectáculo destinado a todo público sugerido desde los 13 años
+            por la temática dramática.</p>
+          <div class="container__carousel">
+            <a href="pages/cartelera.html">Más información</a>
+          </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -108,13 +116,23 @@
   </section>
   <!--Sección imagen cartelera-->
   <section id="presentacion">
-    <img src="assets/images/fondo3.jpg" class="d-block w-100" style="height: 85vh" alt="fondo3">
+    <h2>Los <br>
+      Miserables</h2>
+    <p>Una adaptación del musical original visto en todo el mundo con un elenco de 32 personas
+      con canto en vivo.
+      Es un espectáculo destinado a todo público sugerido desde los 13 años
+      por la temática dramática.</p>
+    <div class="container__presentacion">
+      <a href="pages/cartelera.html">Más información</a>
+    </div>
   </section>
   <!--Footer-->
   <footer>
     <div id="footer-info">
       <h4>Acuarela-Taller de Teatro Musical</h4>
       <p>Dirección: Gral. José de San Martín 519, T4103, Tucumán</p>
+      <div class="footer-info__responsive-text">San Martín 519</div>
+      <div class="footer-info__responsive-text">Tafi Viejo, Tucumán</div>
       <p>Teléfono fijo: 381 461-7438</p>
       <p>Whatsapp: +54 381 300-8840</p>
     </div>
