--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
     <div id="remarque"></div>
       <p>Escribinos tus consultas y te responderemos a la brevedad :D</p>
       <form id="contacto-formulario">
-          <div class="row">
+          <div class="row contacto-inputs_1">
               <div class="col-md-6 col-12">
                 <input type="text" class="contacto-formulario__input" placeholder="Nombre" aria-label="First name" id="nombre">
               </div>
@@ -66,7 +66,7 @@
                 <input type="text" class="contacto-formulario__input" placeholder="Apellido" aria-label="Last name" id="apellido">
               </div>
             </div>
-            <div class="row mt-4">
+            <div class="row contacto-inputs_2">
               <div class="col-md-6 col-12">
                 <input type="tel" class="contacto-formulario__input" placeholder="Telefono" aria-label="First name" id="nombre">
               </div>
